remove js_EmitTree call (And friends) because this stuff has already been taken care of by the Statements() call. See bug 82188 patch=brendan, r=me, sr=jband